tests/sources/invalid/visibility_provider.fire
export int32 addOne(int32 x) {
    return x + 1;
}

int32 hiddenValue = 99;